--- a/ingreso.html
+++ b/ingreso.html
@@ -7,9 +7,9 @@
   <body>
     <h1>THE NIGGA SHOP</h1>
     <form action="insert.php" method="post">
-      <label>Nombre mi negro</label>
+      <label>Name my NIGGA</label>
       <input pattern="(.*[a-z])" type="text" name="product">
-      <label>Precio mi negro</label>
+      <label>Price my NIGGA</label>
       <input required pattern="(.*[0-9])" type="text" name="price">
       <input type="submit" value="Envialo mi negro">
     </form>
