--- a/ingreso.html
+++ b/ingreso.html
@@ -11,7 +11,7 @@
       <input pattern="(.*[a-z])" type="text" name="product">
       <label>Price my NIGGA</label>
       <input required pattern="(.*[0-9])" type="text" name="price">
-      <input type="submit" value="Envialo mi negro">
+      <input type="submit" value="Envialo my NIGGA">
     </form>
   </body>
 </html>
