--- a/ingreso.html
+++ b/ingreso.html
@@ -7,11 +7,11 @@
   <body>
     <h1>THE NIGGA SHOP</h1>
     <form action="insert.php" method="post">
-      <label>Name my NIGGA</label>
+      <label>Name</label>
       <input pattern="(.*[a-z])" type="text" name="product">
-      <label>Price my NIGGA</label>
+      <label>Price</label>
       <input required pattern="(.*[0-9])" type="text" name="price">
-      <input type="submit" value="Envialo my NIGGA">
+      <input type="submit" value="Enviar">
     </form>
   </body>
 </html>
