--- a/update.html
+++ b/update.html
@@ -3,19 +3,53 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/bulma.css">
   </head>
   <body>
-    <h1>Actualizar Precio</h1>
-    <form class="form" action="index.html" method="post">
-      <label class="label">Precio Nuevo</label>
-      <input class="input" pattern="(.*[0-9])" type="text" name="updatePrecio">
-      <label class="label">Esta Activo?</label>
-      <select name="is_active">
-        <option>Si</option>
-        <option>No</option>
-      </select>
-      <input class="input" type="submit" value="Enviar">
-    </form>
+    <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
+  <div class="navbar-brand">
+    <a class="navbar-item" href="https://bulma.io">
+    </a>
+
+    <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+    </a>
+  </div>
+
+  <div id="navbarBasicExample" class="navbar-menu">
+    <div class="navbar-start">
+      <a class="navbar-item" href="ingreso.html">
+        Inicio
+      </a>
+
+      <a class="navbar-item" href="list_products">
+        Productos
+      </a>
+    </div>
+    <div class="navbar-end">
+      <div class="navbar-item">
+      </div>
+    </div>
+  </div>
+</nav><br>
+    <h1 class="title" style="text-align: center">Actualizar Precio</h1>
+    <div class="container is-fluid">
+      <div style="background-color:; border-radius:3px; padding:6px">
+      <form class="form" action="index.html" method="post">
+        <label class="subtitle is-4">Precio Nuevo</label><br><br>
+        <input class="input is-info" pattern="(.*[0-9])" type="text" name="updatePrecio"><br><br>
+        <label class="subtitle is-4">Esta Activo?</label><br><br>
+        <div class="select">
+          <select name="is_active">
+            <option>Si</option>
+            <option>No</option>
+          </select>
+        </div>
+        <input class="button is-link is-outlined" type="submit" value="Enviar"><br><br>
+      </form>
+    </div>
+    </div>
   </body>
 </html>
