--- a/ingreso.html
+++ b/ingreso.html
@@ -1,48 +1,55 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="css/bulma.css">
-    </head>
-    <body>
-    <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link rel="stylesheet" href="css/bulma.css">
+</head>
+<body>
+  <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
-    <a class="navbar-item" href="https://bulma.io">
-    </a>
+      <a class="navbar-item" href="https://bulma.io">
+      </a>
 
-    <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-    </a>
+      <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+      </a>
     </div>
 
     <div id="navbarBasicExample" class="navbar-menu">
-    <div class="navbar-start">
-      <a class="navbar-item" href="ingreso.html">
-        Inicio
-      </a>
+      <div class="navbar-start">
+        <a class="navbar-item" href="ingreso.html">
+          Inicio
+        </a>
 
-      <a class="navbar-item" href="list_products.php">
-        Productos
-      </a>
-    </div>
-    <div class="navbar-end">
-      <div class="navbar-item">
+        <a class="navbar-item" href="list_products.php">
+          Productos
+        </a>
+      </div>
+      <div class="navbar-end">
+        <div class="navbar-item">
+        </div>
       </div>
     </div>
-    </div>
-    </nav><br>
-    <h1 class="title" style="text-align: center">THE NIGGA SHOP</h1>
-    <div class="container">
+  </nav><br>
+  <h1 class="title" style="text-align: center">THE NIGGA SHOP</h1>
+  <div class="container">
     <form action="insert.php" method="post">
       <label class="subtitle is-4">Name</label>
       <input class="input is-info" pattern="(.*[a-z])" type="text" name="product">
       <label class="subtitle is-4">Price</label>
       <input class="input is-info" required pattern="(.*[0-9])" type="text" name="price"><br><br>
+      <label class="subtitle is-4">Esta Activo?</label><br><br>
+      <div class="select">
+        <select name="is_active">
+          <option value="1">Si</option>
+          <option value="0">No</option>
+        </select>
+      </div>
       <input class="button is-link is-outlined" type="submit" value="Enviar">
     </form>
   </div>
-  </body>
+</body>
 </html>
